[package]
name = "agent_usage"
version = "0.1.0"
edition = "2024"
default-run = "usage"
description = "Coding-agent subscription usage in the terminal: Claude Code / Codex rate limits, OpenRouter credits, and local per-session token stats"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dlarsen5/AgentSubscriptionUsage"
readme = "README.md"
keywords = ["cli", "claude", "codex", "usage", "rate-limit"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "usage"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
